[project]
name = "word-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nltk>=3.9.1",
    "numpy<2.0.0",
    "pandas>=2.2.3",
    "scikeras>=0.13.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.1",
    "tensorboard>=2.19.0",
    "tensorflow==2.19.0",
]

